--- a/styles/style.css
+++ b/styles/style.css
@@ -49,4 +49,10 @@ body {
   max-height: fit-content;
 }
 
+.card{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 30px;
+  padding: 10px;
+}
+
 /*# sourceMappingURL=style.css.map */
