--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-top: 30px;
   padding: 10px;
+  text-align: justify;
 }
 
 /*# sourceMappingURL=style.css.map */
