--- a/styles/style.css
+++ b/styles/style.css
@@ -67,4 +67,17 @@ body {
 .stars{
   width: 20%;
 }
+
+.details{
+  width: 95%;
+  height: 70vh;
+  background-color: #95D1CC;
+  margin: 0 auto;
+  z-index: 10;
+  position: absolute;
+  top: 2.5%;
+  right: 2.5%;
+  /*display: none;*/
+  border: 2px solid black;
+  box-shadow: 2px 2px 5px #999; }
 /*# sourceMappingURL=style.css.map */
